[package]
name = "jira_query"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Access tickets on a remote Jira instance."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
