[package]
name = "jira_query"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Access tickets on a remote Jira instance."
readme = "README.md"
documentation = "https://docs.rs/jira_query/"
homepage = "https://github.com/msuchane/jira_query"
repository = "https://github.com/msuchane/jira_query"
keywords = ["jira", "atlassian", "rest"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
restson = "1.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
