[package]
name = "jira_query"
authors = ["Marek Suchánek <marek.suchanek@protonmail.com>"]
version = "1.6.0"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.81"
license = "Apache-2.0"
description = "Access tickets on a remote Jira instance."
readme = "README.md"
documentation = "https://docs.rs/jira_query/"
homepage = "https://github.com/msuchane/jira_query"
repository = "https://github.com/msuchane/jira_query"
keywords = ["jira", "atlassian", "rest"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Version with a security patch:
chrono = { version = ">=0.4.20", features = ["serde"] }

[dev-dependencies]
tokio = { version = ">=1.45", features = ["full"] }
